# sqlglot-age-transform

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: main.yaml
src/sqlglot_age_transform/: transform.py
tests/: test_transform.py
